== 2.8.2 ==
Release date: 
* Enhancement: Removed .elementor-widget-container class as part of the “Optimized Markup” experiment
* Enhancement: Enhanced security of widgets with saved templates feature
* Fixed: Image Comparison - jQuery Event Move lib was missing

== 2.8.1 ==
Release date: November 27, 2024
* Enhancement: Dual Heading - Moved Spacing option to content tab and reorganised the style options
* Enhancement: Pricing Table - Added responsive support for Tooltip position option
* Fixed: Image Comparison - Handle was not working
* Fixed: WP Forms - Confirmation text color option was not working
* Fixed: Unnecessary call to frontend.min.css file
* Fixed: Security issue

== 2.8.0 ==
Release date: October 30, 2024
* New: Interactive Circle widget
* New: Progress Bar widget
* Enhancement: Display Conditions - Added new Device Type display condition
* Enhancement: Added additional size units and custom units to all the widgets and extensions
* Enhancement: Conditionally loading widget styles only when the respective widgets are used
* Enhancement: Gravity Forms - Added options to style sub-labels
* Enhancement: Gravity Forms - Added options to style required text
* Enhancement: Info Box - Added option to change button width
* Enhancement: Info Box - Added option to change button icon spacing
* Enhancement: Info Box - Added option to change button icon size
* Enhancement: Image Comparison - Removed dependency on twentytwenty library
* Fixed: Divider - Icon Rotation option
* Fixed: Removed unnecessary calls to odometer lib files

== 2.7.28 ==
Release date: September 13, 2024
* Fixed: Info Box - Selector for icon hover style options
* Fixed: Info List - Some of the style controls were not responsive
* Fixed: Image Comparison - Divider width was not working for vertical layout
* Fixed: Dual Heading - Default spacing between headings
* Fixed: Counter - Position of prefix and suffix was not inline

== 2.7.27 ==
Release date: August 20, 2024