@@ -1,5 +1,6 @@
 == 2.8.2 ==
 Release date: 
+* Enhancement: Advanced Accordion - Added Vertical Alignment option for Toggle Icon
 * Enhancement: Removed .elementor-widget-container class as part of the “Optimized Markup” experiment
 * Enhancement: Enhanced security of widgets with saved templates feature
 * Fixed: Image Comparison - jQuery Event Move lib was missing
